<resources>
    <string name="app_name">비움</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_home">home</string>
    <string name="menu_collection">collection</string>
    <string name="menu_archive">archive</string>
    <string name="menu_setting">setting</string>
    <string name="dialog_hint">분리수거함 이름</string>

    <!--Setting-->
    <string name="setting_header">설정</string>
<!--    <string name="setting_delete_duration">삭제 휴지통 기간</string>-->
<!--    <string name="setting_day">3일</string>-->
    <string name="setting_trash_management">분리수거함 관리</string>
    <string name="setting_push">푸시알림</string>
    <string name="setting_privacy">개인정보 처리방침</string>
    <string name="setting_service_terms">서비스 이용약관</string>
    <string name="setting_license">오프소스 라이센스</string>
    <string name="setting_introduce">비움 미화원 소개</string>
    <string name="setting_explain">클릭하면 텍스트 수정이 가능해요</string>
    <string name="setting_number">6</string>
    <string name="setting_total_number">/8</string>
    <string name="setting_item_category">취업</string>
    <string name="setting_dialog_ok">확인</string>
    <string name="setting_dialog_explain">설정한 기간이 지나면 글이 영구 삭제됩니다.</string>
    <string name="setting_dialog_number">0</string>
    <string name="setting_dialog_total_number">/6</string>

    <!--Home-->
    <string name="home_writing_header">글쓰기</string>
    <string name="home_writing_title_hint">제목</string>
    <string name="home_writing_body_hint">당신의 고민을 적어주세요.</string>
    <string name="home_writing_total">/20</string>
    <string name="home_drop_delete_header">삭제 휴지통</string>
    <string name="home_drop_collection_header">분리수거함</string>
    <string name="home_writing_empty">카테고리를 추가해주세요!</string>
    <string name="home_writing_count">0</string>
    <string name="home_title">스트레스를\n비워보세요</string>
    <string name="home_select_title">스트레스 양에 따라\n종이를 선택하세요</string>
    <string name="home_less">적음</string>
    <string name="home_lot">많음</string>
    <string name="home_drop_guide">쓰레기통으로 넣어보세요!</string>

    <!--Archive-->
    <string name="archive_header_writing">글</string>
    <string name="archive_header_reward">리워드</string>
    <string name="archive_header_bin">휴지통</string>
    <string name="archive_chip_allCategory">전체 카테고리</string>
    <string name="archive_chip_select">선택</string>
    <string name="archive_chip_setting">설정</string>
    <string name="archive_bin_category">인간관계</string>
    <string name="archive_bin_title">글제목1</string>
    <string name="archive_bin_content">글 내용 미리보기 미리보기 미리보기</string>
    <string name="archive_bin_dday">D-</string>
    <string name="archive_bin_day">1</string>
    <string name="archive_mywriting_category">인간관계</string>
    <string name="archive_mywriting_title">글제목1</string>
    <string name="archive_mywriting_content">대충 글내용 미리보기\n어쩌고저쩌고</string>
    <string name="archive_reward_date">2021.06.30 (수)</string>
    <string name="archive_reward_content">버들가지는 약하나,\n다른 재목을 묶는다.</string>
    <string name="archive_reward_author">-조지 허버트-</string>
    <string name="archive_filter_duration">기간설정</string>
    <string name="archive_filter_category">카테고리</string>

    <!--Popup-->
    <string name="popup_header">리워드</string>
    <string name="popup_date">2021.06.30 (수)</string>
    <string name="popup_content">버들가지는 약하나,\n다른 재목을 묶는다.</string>
    <string name="popup_author">-조지 허버트-</string>
    <string name="popup_comment">나약해지거나 흔들리는\n자신에게 너무 실망하지 마세요!\n한 발 나아가기 위한 작은 휘어짐입니다.</string>

    <string name="popup_category">인간관계</string>
    <string name="popup_title">글 제목 입니다</string>
    <string name="popup_writtenDate">2021년 06월 29일 (화)</string>
    <string name="popup_writtenContent">당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.당신의 고민을 적어주세요.</string>

    <!--collection-->
    <string name="collection_header">분리수거</string>
    <string name="collection_explain_first">&#160;</string>
    <string name="collection_stress">쓰레기</string>
    <string name="collection_explain_last">가 꽉 차면 미화원이 비워갈게요!</string>
    <string name="collection_card_category">인간관계</string>
    <string name="collection_card_name">글제목1</string>
    <string name="collection_card_context">글 내용 미리보기 미리보기 미리보기</string>
    <string name="collection_list_header">분리수거함 이름</string>
    <string name="archive_chip_remove">삭제</string>
    <string name="filter_start">시작</string>

    <!--stats-->
    <string name="stats_header">통계</string>
    <string name="stats_month_header">월간 통계</string>
    <string name="stats_month_context">한 달 내 카테고리별 스트레스 비율입니다</string>
    <string name="stats_total_header">전체 통계</string>
    <string name="stats_total_context">전체 사용 기간 동안의 스트레스 비율입니다</string>
    <string name="stats_item_category">인간관계</string>
    <string name="stats_item_percent">%</string>
    <string name="stats_item_number">35</string>
    <string name="empty_text">아직 글을 작성하지 않았어요!</string>

    <!--firebase-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <!--push-->
    <string name="push_title">깜짝 선물을 발견했어요!</string>
    <string name="push_body">미화원이 휴지통 속에서 무언가\n 발견했어요! 확인해볼까요?</string>
    <string name="push_cancel">닫기</string>
    <string name="push_open">보러가기</string>
    <string name="push_gift_title">오늘의 선물</string>

</resources>