<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_2_main"
        android:src="@drawable/img_present"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/push_title"
        android:textColor="@color/header"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:textSize="16dp"
        android:text="@string/push_body"
        android:textColor="@color/paper_3"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/RoundButton.Cancel"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:text="@string/push_cancel"
        app:layout_constraintBottom_toBottomOf="@id/btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn"
        app:layout_constraintTop_toTopOf="@id/btn" />

    <Button
        android:id="@+id/btn"
        style="@style/RoundButton.Blue"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="16dp"
        android:text="@string/push_open"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body" />

</androidx.constraintlayout.widget.ConstraintLayout>