<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="8dp"
    android:paddingVertical="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_popup_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/popup_category"
                android:textColor="@color/blue_2_main"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_popup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nanum_square_extrabold"
                android:text="@string/popup_title"
                android:textColor="@color/header"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/tv_popup_category"
                app:layout_constraintTop_toBottomOf="@id/tv_popup_category" />

            <TextView
                android:id="@+id/tv_popup_writtenDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/popup_writtenDate"
                android:textColor="@color/paper_3"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="@id/tv_popup_category"
                app:layout_constraintTop_toBottomOf="@id/tv_popup_title" />

            <TextView
                android:id="@+id/tv_popup_writtenContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:paddingHorizontal="24dp"
                android:layout_marginBottom="82dp"
                android:fontFamily="@font/nanum_square_light"
                android:text="@string/popup_writtenContent"
                android:textColor="@color/header"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_popup_writtenDate"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>