<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="40dp">

    <TextView
        android:id="@+id/tv_stats_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nanum_square_extrabold"
        android:text="@string/stats_header"
        android:textColor="@color/header"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/btn_close"
        app:layout_constraintBottom_toBottomOf="@id/tv_stats_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_stats_header" />

    <TextView
        android:id="@+id/tv_month_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nanum_square_extrabold"
        android:text="@string/stats_month_header"
        android:textColor="@color/header"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_stats_header" />

    <TextView
        android:id="@+id/tv_month_context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/stats_month_context"
        android:textColor="@color/paper_3"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="@id/tv_month_stats"
        app:layout_constraintTop_toBottomOf="@id/tv_month_stats" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_month_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="11dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tv_month_context"
        app:spanCount="2"
        tools:itemCount="4"
        tools:listitem="@layout/item_stats" />

    <View
        android:id="@+id/view_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="30dp"
        android:background="@color/paper_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_month_stats" />

    <TextView
        android:id="@+id/tv_total_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nanum_square_extrabold"
        android:text="@string/stats_total_header"
        android:textColor="@color/header"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line" />

    <TextView
        android:id="@+id/tv_total_context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/stats_total_context"
        android:textColor="@color/paper_3"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="@id/tv_total_stats"
        app:layout_constraintTop_toBottomOf="@id/tv_total_stats" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_total_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="11dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_context"
        app:spanCount="2"
        tools:itemCount="4"
        tools:listitem="@layout/item_stats" />

</androidx.constraintlayout.widget.ConstraintLayout>